added auth route
